--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
-spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://localhost:3306/
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/blog
 spring.datasource.username=ukmaUser
 spring.datasource.password=1732hq
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.security.oauth2.client.registration.google.client-id=433364514930-8qcgtmv0ve04ai2roli8hsemnsf7o37t.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=PAwEbDvShFkBQ-suz72nEek3
