-config: set up database -feat: implement sign-up with jwt instead of OAuth2 -feat: add rest models for user entity

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/blog
 spring.datasource.username=ukmaUser
 spring.datasource.password=1732hq
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.security.oauth2.client.registration.google.client-id=433364514930-8qcgtmv0ve04ai2roli8hsemnsf7o37t.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret=PAwEbDvShFkBQ-suz72nEek3
+#spring.security.oauth2.client.registration.google.client-id=433364514930-8qcgtmv0ve04ai2roli8hsemnsf7o37t.apps.googleusercontent.com
+#spring.security.oauth2.client.registration.google.client-secret=PAwEbDvShFkBQ-suz72nEek3
