-refactor: transfer SecurityConstants to properties, read on startup

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,9 @@ spring.datasource.password=1732hq
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 #spring.security.oauth2.client.registration.google.client-id=433364514930-8qcgtmv0ve04ai2roli8hsemnsf7o37t.apps.googleusercontent.com
 #spring.security.oauth2.client.registration.google.client-secret=PAwEbDvShFkBQ-suz72nEek3
+# 2 hours
+expirationTime=7200000
+tokenPrefix=Bearer 
+authHeader=Authorization
+signUpUrl=/users
+tokenSecret=1234567890
