--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,11 +3,13 @@ spring.datasource.url=jdbc:mysql://localhost:3306/blog
 spring.datasource.username=ukmaUser
 spring.datasource.password=1732hq
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=11MB
 #spring.security.oauth2.client.registration.google.client-id=433364514930-8qcgtmv0ve04ai2roli8hsemnsf7o37t.apps.googleusercontent.com
 #spring.security.oauth2.client.registration.google.client-secret=PAwEbDvShFkBQ-suz72nEek3
 # 2 hours
 expirationTime=7200000
-tokenPrefix=Bearer 
+tokenPrefix=Bearer\u0020
 authHeader=Authorization
 signUpUrl=/users
 tokenSecret=1234567890
