--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,6 @@ tokenPrefix=Bearer\u0020
 authHeader=Authorization
 signUpUrl=/users
 tokenSecret=1234567890
+
+minUsernameLen=3
+maxUsernameLen=20
