--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,14 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>29.0-jre</version>
+        </dependency>
+
+
         <!-- validate data from request-->
         <dependency>
             <groupId>javax.validation</groupId>
