--- a/pom.xml
+++ b/pom.xml
@@ -91,27 +91,6 @@
             <version>6.1.5.Final</version>
         </dependency>
 
-        <!--        <dependency>-->
-        <!--            <groupId>org.hibernate.validator</groupId>-->
-        <!--            <artifactId>hibernate-validator-annotation-processor</artifactId>-->
-        <!--        </dependency>-->
-
-        <!--        &lt;!&ndash; https://mvnrepository.com/artifact/javax.el/el-api &ndash;&gt;-->
-        <!--        <dependency>-->
-        <!--            <groupId>javax.el</groupId>-->
-        <!--            <artifactId>el-api</artifactId>-->
-        <!--            <version>2.2</version>-->
-        <!--        </dependency>-->
-
-        <!--        &lt;!&ndash; https://mvnrepository.com/artifact/org.glassfish.web/javax.el &ndash;&gt;-->
-        <!--        <dependency>-->
-        <!--            <groupId>org.glassfish.web</groupId>-->
-        <!--            <artifactId>javax.el</artifactId>-->
-        <!--            <version>2.2.6</version>-->
-        <!--        </dependency>-->
-        <!-- end validation dependencies-->
-
-
         <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-jpamodelgen -->
         <dependency>
             <groupId>org.hibernate</groupId>
@@ -119,6 +98,29 @@
             <version>5.4.21.Final</version>
             <scope>provided</scope>
         </dependency>
+
+        <!-- logging dependencies-->
+        <!-- https://mvnrepository.com/artifact/org.bgee.log4jdbc-log4j2/log4jdbc-log4j2-jdbc4.1 -->
+        <dependency>
+            <groupId>org.bgee.log4jdbc-log4j2</groupId>
+            <artifactId>log4jdbc-log4j2-jdbc4.1</artifactId>
+            <version>1.16</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.12.1</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api -->
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>2.12.1</version>
+        </dependency>
+        <!-- end logging dependencies-->
 
 
         <dependency>
