--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/blog
+spring.datasource.url=jdbc:log4jdbc:mysql://localhost:3306/blog
 spring.datasource.username=ukmaUser
 spring.datasource.password=1732hq
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=11MB
 #spring.security.oauth2.client.registration.google.client-id=433364514930-8qcgtmv0ve04ai2roli8hsemnsf7o37t.apps.googleusercontent.com
