--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,7 @@ tokenPrefix=Bearer\u0020
 authHeader=Authorization
 signUpUrl=/users
 tokenSecret=1234567890
-
 minUsernameLen=3
 maxUsernameLen=20
+recordsPerPage=10
+evaluatorsPerBlock=20
