- feature: record pagination (1st part of commit - user's own reaction; 2nd part - other users' reaction stats, 3rd part - number of comments) - feature: comments pagination - feature: evaluators pagination
- bug-spot: it is possible to like/comment unexisting records

--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -43,6 +43,11 @@
       "name": "evaluatorsPerBlock",
       "type": "java.lang.String",
       "description": "Defines number of evaluators loaded in one block (when user wants to know who liked a specified record.."
+    },
+    {
+      "name": "commentsPerBlock",
+      "type": "java.lang.String",
+      "description": "How name comments are displayed in a block."
     }
   ]
 }
