--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+# Enabling H2 Console
+#spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.data.jpa.repositories.bootstrap-mode=default
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:log4jdbc:mysql://localhost:3306/blog
 spring.datasource.username=ukmaUser
@@ -18,3 +22,4 @@ minUsernameLen=3
 maxUsernameLen=20
 recordsPerPage=10
 evaluatorsPerBlock=20
+commentsPerBlock=15
