-bugfix&code-cleanup: evaluation service -feature: publisher statistics

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,6 @@
-# Enabling H2 Console
-#spring.h2.console.enabled=true
-#spring.datasource.url=jdbc:h2:mem:testdb
-#spring.data.jpa.repositories.bootstrap-mode=default
 spring.jpa.hibernate.ddl-auto=update
+#populate table with data
+#spring.datasource.initialization-mode=always
 spring.datasource.url=jdbc:log4jdbc:mysql://localhost:3306/blog
 spring.datasource.username=ukmaUser
 spring.datasource.password=1732hq
