-feature: search for records with a passed subtitle **getting ready for clean-up**

--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -58,6 +58,11 @@
       "name": "digestPageSize",
       "type": "java.lang.String",
       "description": "The number of the most recent records displayed as a digest."
+    },
+    {
+      "name": "searchPageSize",
+      "type": "java.lang.String",
+      "description": "The number of records or publishers returned on client's query."
     }
   ]
 }
