-bugfix: add subscription data with PublisherPreview&UserPageResponse -bugfix: remove only comments that you one has posted and not other users' -bugfix: user can only add&update&delete records to his own page, no matter the path variable value etc -refactor: replace field DI with constructor DIs, resolve easy TODOs

--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -63,6 +63,16 @@
       "name": "searchPageSize",
       "type": "java.lang.String",
       "description": "The number of records or publishers returned on client's query."
+    },
+    {
+      "name": "recordsPreviewBlock",
+      "type": "java.lang.String",
+      "description": "Number of record images returned when publisher preview data gets queried."
+    },
+    {
+      "name": "passwordPattern.regexp",
+      "type": "java.lang.String",
+      "description": "Pattern that defines acceptable passwords for user registration."
     }
   ]
 }
