--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,7 @@ tokenSecret=1234567890
 minUsernameLen=3
 maxUsernameLen=20
 recordsPerPage=10
+recordsPreviewBlock=3
 evaluatorsPerBlock=20
 commentsPerBlock=15
 followersPerBlock=20
