--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,9 @@ spring.datasource.username=ukmaUser
 spring.datasource.password=1732hq
 spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.data.neo4j.uri=bolt://localhost:7687
+spring.data.neo4j.username=neo4j
+spring.data.neo4j.password=secret
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=11MB
 #spring.security.oauth2.client.registration.google.client-id=433364514930-8qcgtmv0ve04ai2roli8hsemnsf7o37t.apps.googleusercontent.com
