-change: authorization details are now returned in the response body

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,8 +15,9 @@ spring.servlet.multipart.max-request-size=11MB
 #spring.security.oauth2.client.registration.google.client-secret=PAwEbDvShFkBQ-suz72nEek3
 # 2 hours
 expirationTime=7200000
-tokenPrefix=Bearer\u0020
-authHeader=Authorization
+#tokenPrefix=Bearer\u0020
+tokenPrefix=Bearer
+#authHeader=Authorization
 signUpUrl=/users
 tokenSecret=1234567890
 minUsernameLen=3
