--- a/.gitignore
+++ b/.gitignore
@@ -174,4 +174,5 @@ src\main\frontend\npm-debug.log*
 src\main\frontend\yarn-debug.log*
 src\main\frontend\yarn-error.log*
 /.idea/
-/src/main/frontend/src/react-app-env.d.ts
+src/main/frontend/src/react-app-env.d.ts
+src/main/frontend/.eslintcache
