--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -11,7 +11,10 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
+    "react-router-config": "^5.1.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "store": "^2.0.12",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
