--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -11,6 +11,7 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
+    "react-dropzone": "^11.2.4",
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
