--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,15 +11,15 @@ spring.data.neo4j.username=neo4j
 spring.data.neo4j.password=secret
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=11MB
-#spring.security.oauth2.client.registration.google.client-id=433364514930-8qcgtmv0ve04ai2roli8hsemnsf7o37t.apps.googleusercontent.com
-#spring.security.oauth2.client.registration.google.client-secret=PAwEbDvShFkBQ-suz72nEek3
 # 2 hours
 expirationTime=7200000
-#tokenPrefix=Bearer\u0020
 tokenPrefix=Bearer
-#authHeader=Authorization
 signUpUrl=/users
 tokenSecret=1234567890
+#username len constrains must match with patterns defined in Constants class
+recordsDirectoriesDepth=2
+#512 KB
+compressionThreshold=524288
 minUsernameLen=3
 maxUsernameLen=20
 recordsPerPage=10
@@ -29,3 +29,5 @@ commentsPerBlock=15
 followersPerBlock=20
 digestPageSize=15
 searchPageSize=10
+recordRecommendationSize=9
+publisherRecommendationSize=10
