configure H2 for testing

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.jpa.hibernate.ddl-auto=update
+#server.servlet.context-path=/sprout
+spring.jpa.hibernate.ddl-auto=create
 #populate table with data
 #spring.datasource.initialization-mode=always
 spring.datasource.url=jdbc:log4jdbc:mysql://localhost:3306/blog
