-test: add tests for custom sql queries

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 #server.servlet.context-path=/sprout
 spring.jpa.hibernate.ddl-auto=create
 #populate table with data
-#spring.datasource.initialization-mode=always
+spring.datasource.initialization-mode=never
 spring.datasource.url=jdbc:log4jdbc:mysql://localhost:3306/blog
 spring.datasource.username=ukmaUser
 spring.datasource.password=1732hq
+#spring.jpa.show-sql=true
 spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.data.neo4j.uri=bolt://localhost:7687
