--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,7 +1,9 @@
 spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=create
 spring.datasource.initialization-mode=never
-spring.datasource.url=jdbc:h2:mem:tester
+spring.datasource.url=jdbc:h2:mem:tester;DB_CLOSE_DELAY=-1
+spring.datasource.username=sa
+spring.datasource.password=
 spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 #spring.jpa.database-platform=org.hibernate.dialect.H2Dialect - autodetected
