--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -3,19 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
-    "axios": "^0.21.0",
-    "bootstrap": "^4.5.3",
+    "axios": "^0.21.1",
     "react": "^17.0.1",
-    "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
-    "react-dropzone": "^11.2.4",
-    "react-router-config": "^5.1.1",
-    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "store": "^2.0.12",
+    "typescript": "^4.1.3",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -41,5 +37,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@types/react-router": "^5.1.9",
+    "@types/react-router-dom": "^5.1.7",
+    "@types/store": "^2.0.2",
+    "react-router-dom": "^5.2.0"
   }
 }
