--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,12 +2,14 @@
 spring.jpa.hibernate.ddl-auto=create
 #populate table with data
 spring.datasource.initialization-mode=never
-spring.datasource.url=jdbc:log4jdbc:mysql://localhost:3306/blog
+#spring.datasource.url=jdbc:log4jdbc:mysql://localhost:3306/blog
+spring.datasource.url=jdbc:mysql://localhost:3306/blog
 spring.datasource.username=ukmaUser
 spring.datasource.password=1732hq
-#spring.jpa.show-sql=true
-spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+#spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.show-sql=true
 spring.data.neo4j.uri=bolt://localhost:7687
 spring.data.neo4j.username=neo4j
 spring.data.neo4j.password=secret
