--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.21.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-paginate": "^7.0.0",
     "react-scripts": "4.0.1",
     "store": "^2.0.12",
     "typescript": "^4.1.3",
@@ -41,6 +42,7 @@
   "devDependencies": {
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-paginate": "^6.2.1",
     "@types/react-router": "^5.1.9",
     "@types/react-router-dom": "^5.1.7",
     "@types/store": "^2.0.2",
