--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
     "axios": "^0.21.1",
+    "qs": "^6.9.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-paginate": "^7.0.0",
@@ -40,6 +41,7 @@
     ]
   },
   "devDependencies": {
+    "@types/qs": "^6.9.5",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-paginate": "^6.2.1",
