--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #server.servlet.context-path=/sprout
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 #populate table with data
 spring.datasource.initialization-mode=never
 #spring.datasource.url=jdbc:log4jdbc:mysql://localhost:3306/blog
