--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -7,8 +7,10 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
     "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
     "qs": "^6.9.6",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
     "react-paginate": "^7.0.0",
     "react-scripts": "4.0.1",
