-bugfix: add key prop to same components at different routes, components are now remounted -feature: add email confirmation for registration -refactor: use singular attribute instead of string (metamodel)

--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -93,6 +93,16 @@
       "name": "compressionThreshold",
       "type": "java.lang.Integer",
       "description": "If image that is being stored is bigger that this, then a compressed copy of this image is created."
+    },
+    {
+      "name": "signupExpiration",
+      "type": "java.lang.String",
+      "description": "Time a user has to confirm his registration."
+    },
+    {
+      "name": "confirmSignUpUrl",
+      "type": "java.lang.String",
+      "description": "Url to be used as a base to confirm registration request."
     }
   ]
 }
