--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #server.servlet.context-path=/sprout
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 #populate table with data
 spring.datasource.initialization-mode=never
 #spring.datasource.url=jdbc:log4jdbc:mysql://localhost:3306/blog
@@ -15,10 +15,12 @@ spring.data.neo4j.username=neo4j
 spring.data.neo4j.password=secret
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=11MB
-# 2 hours
+# 2 hours in milliseconds
 expirationTime=7200000
 tokenPrefix=Bearer
 signUpUrl=/users
+confirmSignUpUrl=/users/confirm/
+frontendConfirmationUrl=http://localhost:3000/confirm/
 tokenSecret=1234567890
 #username len constrains must match with patterns defined in Constants class
 recordsDirectoriesDepth=2
@@ -35,3 +37,16 @@ digestPageSize=15
 searchPageSize=10
 recordRecommendationSize=9
 publisherRecommendationSize=10
+# 20 minutes in seconds = 1200
+signupExpiration=1200
+###### Email Properties ######
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.username=sprout.mail.sender@gmail.com
+spring.mail.password=fwndotdpmrjjzqgk
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
