--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #server.servlet.context-path=/sprout
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 #populate table with data
 spring.datasource.initialization-mode=never
 #spring.datasource.url=jdbc:log4jdbc:mysql://localhost:3306/blog
@@ -22,6 +22,7 @@ signUpUrl=/users
 confirmSignUpUrl=/users/confirm/
 frontendConfirmationUrl=http://localhost:3000/confirm/
 tokenSecret=1234567890
+refreshTokenUrl=/refresh-token
 #username len constrains must match with patterns defined in Constants class
 recordsDirectoriesDepth=2
 #512 KB
