--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #server.servlet.context-path=/sprout
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 #populate table with data
-spring.datasource.initialization-mode=always
+spring.datasource.initialization-mode=never
 #spring.datasource.url=jdbc:log4jdbc:mysql://localhost:3306/blog
 spring.datasource.url=jdbc:mysql://localhost:3306/blog
 spring.datasource.username=ukmaUser
