-refactor: split recommendations api, return just list instead of fake LazyContentPage -testing: add sample data

--- a/.gitignore
+++ b/.gitignore
@@ -176,3 +176,4 @@ src\main\frontend\yarn-error.log*
 /.idea/
 src/main/frontend/src/react-app-env.d.ts
 src/main/frontend/.eslintcache
+/userImages/
