--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,11 +2,11 @@
 spring.jpa.hibernate.ddl-auto=update
 #populate table with data
 spring.datasource.initialization-mode=never
-#spring.datasource.url=jdbc:log4jdbc:mysql://localhost:3306/blog
+#enabled for development, should be disabled in production
+spring.jpa.open-in-view=true
 spring.datasource.url=jdbc:mysql://localhost:3306/blog
 spring.datasource.username=ukmaUser
 spring.datasource.password=1732hq
-#spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.show-sql=true
