--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -8,13 +8,14 @@
     "@testing-library/user-event": "^12.6.0",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "node-sass": "^4.14.1",
     "qs": "^6.9.6",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
     "react-paginate": "^7.0.0",
     "react-scripts": "4.0.1",
-    "store": "^2.0.12",
+    "store2": "^2.12.0",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4"
   },
@@ -49,7 +50,6 @@
     "@types/react-paginate": "^6.2.1",
     "@types/react-router": "^5.1.9",
     "@types/react-router-dom": "^5.1.7",
-    "@types/store": "^2.0.2",
     "react-router-dom": "^5.2.0"
   }
 }
