--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,8 +16,8 @@ spring.data.neo4j.password=secret
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=11MB
 # 2 hours in milliseconds
-expirationTime=7200000
-#expirationTime=60000
+#expirationTime=7200000
+expirationTime=60000
 tokenPrefix=Bearer
 signUpUrl=/users
 confirmSignUpUrl=/users/confirm/
