-feature: add show followers, subscriptions

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,31 +16,32 @@ spring.data.neo4j.password=secret
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=11MB
 # 2 hours in milliseconds
-#expirationTime=7200000
-expirationTime=60000
-tokenPrefix=Bearer
-signUpUrl=/users
-confirmSignUpUrl=/users/confirm/
-frontendConfirmationUrl=http://localhost:3000/confirm/
-tokenSecret=1234567890
-refreshTokenUrl=/refresh-token
+expirationTime=7200000
+#expiration-time=60000
+token-prefix=Bearer
+signup-url=/users
+confirm-signup-url=/users/confirm/
+frontend-confirmation-url=http://localhost:3000/confirm/
+token-secret=1234567890
+refresh-token-url=/refresh-token
 #username len constrains must match with patterns defined in Constants class
 recordsDirectoriesDepth=2
 #512 KB
-compressionThreshold=524288
+compression-threshold=524288
 minUsernameLen=3
-maxUsernameLen=20
-recordsPerPage=5
-recordsPreviewBlock=3
-evaluatorsPerBlock=10
-commentsPerBlock=5
-followersPerBlock=10
-digestPageSize=5
-searchPageSize=5
-recordRecommendationSize=9
-publisherRecommendationSize=10
+max-username-len=20
+records-per-page=5
+records-preview-block=3
+evaluators-per-block=10
+comments-per-block=5
+followers-per-block=10
+subscriptions-per-block=8
+digest-page-size=5
+search-page-size=5
+record-recommendation-size=9
+publisher-recommendation-size=10
 # 20 minutes in seconds = 1200
-signupExpiration=1200
+signup-expiration=1200
 ###### Email Properties ######
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
