getting ready for deploy

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,16 +3,16 @@ spring.jpa.hibernate.ddl-auto=update
 #populate table with data
 spring.datasource.initialization-mode=never
 #enabled for development, should be disabled in production
-spring.jpa.open-in-view=true
-spring.datasource.url=jdbc:mysql://localhost:3306/blog
-spring.datasource.username=ukmaUser
-spring.datasource.password=1732hq
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.show-sql=true
-spring.data.neo4j.uri=bolt://localhost:7687
-spring.data.neo4j.username=neo4j
-spring.data.neo4j.password=secret
+spring.jpa.open-in-view=false
+spring.datasource.url=${RDB_MAIN_URL}
+spring.datasource.username=${RDB_MAIN_USERNAME}
+spring.datasource.password=${RDB_MAIN_PASSWORD}
+spring.datasource.driver-class-name=${DATASOURCE_DRIVER}
+spring.jpa.properties.hibernate.dialect=${HIBERNATE_DIALECT}
+spring.jpa.show-sql=false
+spring.data.neo4j.uri=${GRAPH_RECOM_URL}
+spring.data.neo4j.username=${GRAPH_RECOM_USERNAME}
+spring.data.neo4j.password=${GRAPH_RECOM_PASSWORD}
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=11MB
 # 2 hours in milliseconds
@@ -21,8 +21,8 @@ expirationTime=7200000
 token-prefix=Bearer
 signup-url=/users
 confirm-signup-url=/users/confirm/
-frontend-confirmation-url=http://localhost:3000/confirm/
-token-secret=1234567890
+frontend-confirmation-url=${FRONTEND_CONFIRM_URL}
+token-secret=${TOKEN_SECRET}
 refresh-token-url=/refresh-token
 #username len constrains must match with patterns defined in Constants class
 recordsDirectoriesDepth=2
@@ -38,7 +38,7 @@ followers-per-block=10
 subscriptions-per-block=8
 digest-page-size=5
 search-page-size=5
-record-recommendation-size=9
+record-recommendation-size=10
 publisher-recommendation-size=10
 # 20 minutes in seconds = 1200
 signup-expiration=1200
@@ -47,7 +47,7 @@ spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.username=sprout.mail.sender@gmail.com
-spring.mail.password=fwndotdpmrjjzqgk
+spring.mail.password=${MAIL_SENDER_PASSWORD}
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.connectiontimeout=5000
