correct a url/uri typo get ddl-auto, data-init-mode from env vars

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #server.servlet.context-path=/sprout
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=${DDL_MODE}
 #populate table with data
-spring.datasource.initialization-mode=never
+spring.datasource.initialization-mode=${DATA_INIT_MODE}
 #enabled for development, should be disabled in production
 spring.jpa.open-in-view=false
 spring.datasource.url=${RDB_MAIN_URL}
@@ -10,7 +10,7 @@ spring.datasource.password=${RDB_MAIN_PASSWORD}
 spring.datasource.driver-class-name=${DATASOURCE_DRIVER}
 spring.jpa.properties.hibernate.dialect=${HIBERNATE_DIALECT}
 spring.jpa.show-sql=false
-spring.data.neo4j.uri=${GRAPH_RECOM_URL}
+spring.data.neo4j.uri=${GRAPH_RECOM_URI}
 spring.data.neo4j.username=${GRAPH_RECOM_USERNAME}
 spring.data.neo4j.password=${GRAPH_RECOM_PASSWORD}
 spring.servlet.multipart.max-file-size=10MB
