npm run build -> npm build

--- a/pom.xml
+++ b/pom.xml
@@ -244,8 +244,7 @@
                         </goals>
                         <phase>prepare-package</phase>
                         <configuration>
-                            <!--                            'run build' OR 'build'-->
-                            <arguments>run build</arguments>
+                            <arguments>build</arguments>
                         </configuration>
                     </execution>
                 </executions>
